CMAPI2-423 Refactor end points
