# bip-reference-person/src/main/resources/openapi/openapi.yml
@@ -69,7 +69,12 @@ paths:
           description : participant id
           required : true
           schema:
-            type : string
+            type: integer
+            format: int64
+            example: 6666345
+            description: The Participant ID of the person for whom to retrieve data
+            minimum: 1
+            exclusiveMinimum: false
       tags:
         - reference-person
       summary: Upload document for the PID using Multipart form data and store it in the configured / in-memory database.
@@ -132,6 +137,7 @@ paths:
       security:
         - bearerAuth: []
       deprecated: false
+  "/api/v1/persons/{pid}/documentMetadata":
     get:
       parameters:
         - name : pid
@@ -139,23 +145,24 @@ paths:
           description : participant id
           required : true
           schema:
-            type : string
+            type: integer
+            format: int64
+            example: 6666345
+            description: The Participant ID of the person for whom to retrieve data
+            minimum: 1
+            exclusiveMinimum: false
       tags:
         - reference-person
-      summary: Download a document for the PID using octet-stream from the configured / in-memory database.
-      description:  Will download a document based on the PID.
-      operationId: download
+      summary: Get metadata about the document uploaded for a pid, that is stored in the database
+      description: Demonstrate retrieval of data from a database
+      operationId: getDocumentMetadata
       responses:
         '200':
           description: OK
           content:
-            application/octet-stream:
-              schema:
-                type: string
-                format: binary
             application/json:
               schema:
-                '$ref': '#/components/schemas/ProviderResponse'  
+                '$ref': '#/components/schemas/PersonDocumentMetadataResponse'
         '400':
           description: There was an error encountered processing the Request.  Response
             will contain a  "messages" element that will provide further information
@@ -183,7 +190,48 @@ paths:
       security:
         - bearerAuth: []
       deprecated: false
-    
+  "/api/v1/persons/sampleReferenceDocument":
+    get:
+      tags:
+        - reference-person
+      summary: Download the sample reference document 
+      description: Will download a document based on the PID, that is stored statically in the application, to demonstrate document downloads
+      operationId: downloadSampleDocument
+      responses:
+        '200':
+          description: OK
+          content:
+            application/octet-stream:
+              schema:
+                type: string
+                format: binary
+        '400':
+          description: There was an error encountered processing the Request.  Response
+            will contain a  "messages" element that will provide further information
+            on the error.  This request shouldn't be retried until corrected.
+          content:
+            application/problem+json:
+              schema:
+                '$ref': '#/components/schemas/ProviderResponse'
+        '403':
+          description: The request is not authorized.  Please verify credentials used
+            in the request.
+          content:
+            application/problem+json:
+              schema:
+                '$ref': '#/components/schemas/ProviderResponse'
+        '500':
+          description: There was an error encountered processing the Request.  Response
+            will contain a  "messages" element that will provide further information
+            on the error.  Please retry.  If problem persists, please contact support
+            with a copy of the Response.
+          content:
+            application/problem+json:
+              schema:
+                '$ref': '#/components/schemas/ProviderResponse'
+      security:
+        - bearerAuth: []
+      deprecated: false
   "/api/v1/persons/clientTests/callPersonByPidUsingFeignClient":
     post:
       tags:
@@ -403,6 +451,22 @@ components:
             personInfo:
               description: The object representing the person information
               '$ref': '#/components/schemas/PersonInfo'
+    PersonDocumentMetadataResponse:
+      title: PersonDocumentMetadataResponse
+      description: Model for holding metadata sent along with an uploaded document
+      allOf:
+       - '$ref': '#/components/schemas/ProviderResponse'
+       - type: object
+         # all other properties specific to PersonDocumentMetadataResponse
+         properties:
+           documentName:
+             type: string
+             description : The name of the document
+           documentCreationDate:
+             type: string
+             description : The date of creation of the document in YYYY-MM-DD format
+             pattern: 'YYYY-MM-DD'
+             example: 2019-08-09
     # Schema objects below are from BIP Framework to be declared.
     # These objects need to be mapped in <importMappings> section
     # of openapi-generator-maven-plugin so that no code is generated 
